--- a/index.html
+++ b/index.html
@@ -1,7 +1,57 @@
 <IDOCTYPE html>
     <htmllang="pt-BR">
         <head>
-            <meta>
+            <metacharset="UFT-8">
+                <metaname="viewport"contet="width=device-width,initidal-scale=1.0">
+                    <title>EducaFlix</title>
+                    <style>
+                        body{margin:0;
+                             frontfamily:arial,sans-serif;
+                             backgroud-color:#000033;
+                             color:white;}
+                        header{
+                            background-color:navy;
+                            padding:20px;
+                            text-align:center;
+                            font-size:2cm;
+                            font-weight:bold;}
+                        banner{
+                             background-color:darkred;
+                            padding:20px;
+                            display:flex;
+                            aling-items:center;
+                            justify-contet:space-around;
+                        }
+                        bannerh2{
+                            color:cyan;
+                            font-size:1.8cm;
+                        }
+                        videos{
+                             background-color:navy;
+                            padding:20px;
+                        }
+                        video-grid{
+                            display:flex;
+                            gap:15px;
+                            flex-wrap:wrap;
+                        }
+                        video-gripinframe{
+                            border:none;
+                        }
+                        </style>
         </head>
+                    <body>
+                        <header>
+                            EducaFlix
+                        </header>
+                        <sectionclass="banner">
+                            <div>
+                                <h2>"Fundamentos básicos"</h2>
+                                <p>#fundamentos#estudo</p>
+                            </div>
+                            <inframewidth="400"height="225"
+                                src="https://youtu.be/0W1LY78CIcU?si=0DvNY6W6OT-dDLPG"
+                                title="Vídeo principal"allowfullscreen></inframe>
+                                <section>
     </html>
 </html>
