--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <metacharset="UFT-8">
                 <metaname="viewport"contet="width=device-width,initidal-scale=1.0">
-                    <title>EducaFlix</title>
+                    <title>Fundamentos da arte</title>
                     <style>
                         body{margin:0;
                              frontfamily:arial,sans-serif;
@@ -53,5 +53,18 @@
                                 src="https://youtu.be/0W1LY78CIcU?si=0DvNY6W6OT-dDLPG"
                                 title="Vídeo principal"allowfullscreen></inframe>
                                 <section>
+                                    <sectionclass="videos">
+                                        <h2>Vídeos Recomendas</h2>
+                                        <divclass="video-grid">
+                                             <inframewidth="250"height="140"
+                                src=""title="Vídeo 1"allowfullscreen></inframe>
+                                <inframewidth="250"height="140"
+                                src=""title="Vídeo 2"allowfullscreen></inframe>
+                                <inframewidth="250"height="140"
+                                src=""title="Vídeo 3"allowfullscreen></inframe>
+                                <inframewidth="250"height="140"
+                                src=""title="Vídeo 4"allowfullscreen></inframe>
+                                        </div>
+                                    </section>
     </html>
 </html>
