--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </header>
                         <sectionclass="banner">
                             <div>
-                                <h2>"Fundamentos básicos"</h2>
+                                <h2>"Fundamentos"</h2>
                                 <p>#fundamentos#estudo</p>
                             </div>
                             <inframewidth="400"height="225"
@@ -57,13 +57,13 @@
                                         <h2>Vídeos Recomendas</h2>
                                         <divclass="video-grid">
                                              <inframewidth="250"height="140"
-                                src=""title="Vídeo 1"allowfullscreen></inframe>
+                                src="https://youtu.be/nUV-Ra08Hps?si=rg7xrM_Q-PL8pfp0"title="Anatomia"allowfullscreen></inframe>
                                 <inframewidth="250"height="140"
-                                src=""title="Vídeo 2"allowfullscreen></inframe>
+                                src="https://youtu.be/Lnpay0nNv6E?si=i0dFN3vP8t4FWECJ"title="Formas"allowfullscreen></inframe>
                                 <inframewidth="250"height="140"
-                                src=""title="Vídeo 3"allowfullscreen></inframe>
+                                src="https://youtu.be/DJFFG-Z6_MQ?si=gf9u1qC3f05WNaPd"title="Perspectiva"allowfullscreen></inframe>
                                 <inframewidth="250"height="140"
-                                src=""title="Vídeo 4"allowfullscreen></inframe>
+                                src="https://youtu.be/6SRi8gxv2_8?si=K_qkGh-TfYQMdnGE"title="Linha"allowfullscreen></inframe>
                                         </div>
                                     </section>
     </html>
