--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
                              backgroud-color:#000033;
                              color:white;}
                         header{
-                            background-color:navy;
+                            background-color:rgba(223, 186, 23, 0.836);
                             padding:20px;
                             text-align:center;
                             font-size:2cm;
                             font-weight:bold;}
                         banner{
-                             background-color:darkred;
+                             background-color:rgb(20, 100, 175);
                             padding:20px;
                             display:flex;
                             aling-items:center;
                             justify-contet:space-around;
                         }
                         bannerh2{
-                            color:cyan;
+                            color:rgb(0, 255, 76);
                             font-size:1.8cm;
                         }
                         videos{
-                             background-color:navy;
+                             background-color:rgb(201, 7, 152);
                             padding:20px;
                         }
                         video-grid{
