--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         }
                         </style>
         </head>
-                    <body>
-                        <header>
+        <body>
+             <header>
                             EducaFlix
                         </header>
                         <sectionclass="banner">
@@ -66,5 +66,7 @@
                                 src="https://youtu.be/6SRi8gxv2_8?si=K_qkGh-TfYQMdnGE"title="Linha"allowfullscreen></inframe>
                                         </div>
                                     </section>
+        </body>
+                       
     </html>
 </html>
