--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </head>
         <body>
              <header>
-                            EducaFlix
+                            Funamentos da arte
                         </header>
                         <sectionclass="banner">
                             <div>
