<IDOCTYPE html>     <htmllang="pt-BR">         <head>             <metacharset="UFT-8">                 <metaname="viewport"contet="width=device-width,initidal-scale=1.0">                     <title>Fundamentos da arte</title>                     <style>                         body{margin:0;                              frontfamily:arial,sans-serif;                              backgroud-color:#000033;                              color:white;}                         header{                             background-color:rgba(228, 216, 163, 0.836);                             padding:20px;                             text-align:center;                             font-size:2cm;                             font-weight:bold;}                         banner{                              background-color:rgba(36, 116, 33, 0.747);                             padding:20px;                             display:flex;                             aling-items:center;                             justify-contet:space-around;                         }                         bannerh2{                             color:rgb(23, 102, 47);                             font-size:1.8cm;                         }                         videos{                              background-color:rgb(77, 78, 28);                             padding:20px;                         }                         video-grid{                             display:flex;                             gap:15px;                             flex-wrap:wrap;                         }                         video-gripinframe{                             border:none;                         }                         </style>         </head>         <body>              <header>                             Funamentos da arte                         </header>                         <sectionclass="banner">                             <div>                                 <h2>"Fundamentos"</h2>                            

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
                             font-size:2cm;
                             font-weight:bold;}
                         banner{
-                             background-color:rgb(20, 100, 175);
+                             background-color:rgba(36, 116, 33, 0.747);
                             padding:20px;
                             display:flex;
                             aling-items:center;
                             justify-contet:space-around;
                         }
                         bannerh2{
-                            color:rgb(0, 255, 76);
+                            color:rgb(23, 102, 47);
                             font-size:1.8cm;
                         }
                         videos{
-                             background-color:rgb(201, 7, 152);
+                             background-color:rgb(77, 78, 28);
                             padding:20px;
                         }
                         video-grid{
